Refactored project data to a more OO approach Refactored yaml handling code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "program": "${workspaceRoot}/kuberfest/run.py",
             "args": ["dotnet_demo_project", "--build", "--push", "--deploy", "--init-db", "--start-minikube"],
+            // "args": ["dotnet_demo_project", "--deploy"]
             "console": "integratedTerminal",
             "cwd": "${workspaceRoot}",
         },
