--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceRoot}/kuberfest/run.py",
             // "args": ["dotnet_demo_project", "--build", "--push", "--deploy", "--init-db", "--start-minikube"],
-            "args": ["dotnet_demo_project"],
+            "args": ["dotnet_demo_project", "--start_minikube"],
             "console": "integratedTerminal",
             "cwd": "${workspaceRoot}",
         },
