Refactored the init_db command to reside in the project itself. Deprecated the functions.py structure.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Python: Run demo project",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceRoot}/kuberfest/run.py",
+            "program": "${workspaceRoot}/kbf",
             // "args": ["dotnet_demo_project", "--build", "--push", "--deploy", "--init-db", "--start-minikube"],
-            "args": ["dotnet_demo_project", "--start_minikube"],
+            "args": ["dotnet_demo_project", "--h"],
             "console": "integratedTerminal",
             "cwd": "${workspaceRoot}",
         },
